--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "test-todo",
+  "name": "assignment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "test": "mocha test/apitest.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/jest": "^27.4.1",
     "@types/mongoose": "^5.7.36",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5",
     "ts-node-dev": "^1.0.0-pre.57",
     "typescript": "^3.9.7"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.0"
+    "mongoose": "^5.10.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   }
 }
